syntax = "proto3";

package rest;

option go_package = ".;rest";

// 行为类型枚举
enum ActionType {
  ACTION_TYPE_UNSPECIFIED = 0;
  ACTION_TYPE_VIEW = 1;           // 浏览
  ACTION_TYPE_LIKE = 2;           // 点赞
  ACTION_TYPE_FAVORITE = 3;       // 收藏
  ACTION_TYPE_SHARE = 4;          // 分享
  ACTION_TYPE_COMMENT = 5;        // 评论
  ACTION_TYPE_FOLLOW = 6;         // 关注
  ACTION_TYPE_LOGIN = 7;          // 登录
  ACTION_TYPE_SEARCH = 8;         // 搜索
  ACTION_TYPE_DOWNLOAD = 9;       // 下载
  ACTION_TYPE_PURCHASE = 10;      // 购买
}

// 对象类型枚举
enum HistoryObjectType {
  HISTORY_OBJECT_TYPE_UNSPECIFIED = 0;
  HISTORY_OBJECT_TYPE_POST = 1;           // 帖子
  HISTORY_OBJECT_TYPE_ARTICLE = 2;        // 文章
  HISTORY_OBJECT_TYPE_VIDEO = 3;          // 视频
  HISTORY_OBJECT_TYPE_USER = 4;           // 用户
  HISTORY_OBJECT_TYPE_PRODUCT = 5;        // 商品
  HISTORY_OBJECT_TYPE_GROUP = 6;          // 群组
}

// 历史记录信息
message HistoryRecord {
  int64 id = 1;
  int64 user_id = 2;              // 用户ID
  ActionType action_type = 3;     // 行为类型
  HistoryObjectType history_object_type = 4;     // 对象类型
  int64 object_id = 5;            // 对象ID
  string object_title = 6;        // 对象标题（冗余字段，便于显示）
  string object_url = 7;          // 对象URL（可选）
  string metadata = 8;            // 扩展数据（JSON格式）
  string ip_address = 9;          // IP地址
  string user_agent = 10;         // 用户代理
  string device_info = 11;        // 设备信息
  string location = 12;           // 地理位置（可选）
  int64 duration = 13;            // 持续时间（秒，适用于浏览等行为）
  string created_at = 14;
}

// 创建历史记录请求
message CreateHistoryRequest {
  int64 user_id = 1;
  ActionType action_type = 2;
  HistoryObjectType history_object_type = 3;
  int64 object_id = 4;
  string object_title = 5;
  string object_url = 6;
  string metadata = 7;
  string ip_address = 8;
  string user_agent = 9;
  string device_info = 10;
  string location = 11;
  int64 duration = 12;
}

// 创建历史记录响应
message CreateHistoryResponse {
  bool success = 1;
  string message = 2;
  HistoryRecord record = 3;
}

// 批量创建历史记录请求
message BatchCreateHistoryRequest {
  repeated CreateHistoryRequest records = 1;
}

// 批量创建历史记录响应
message BatchCreateHistoryResponse {
  bool success = 1;
  string message = 2;
  int32 created_count = 3;
  repeated HistoryRecord records = 4;
}

// 获取用户历史记录请求
message GetUserHistoryRequest {
  int64 user_id = 1;
  ActionType action_type = 2;     // 可选，过滤行为类型
  HistoryObjectType history_object_type = 3;     // 可选，过滤对象类型
  string start_time = 4;          // 开始时间
  string end_time = 5;            // 结束时间
  int32 page = 6;
  int32 page_size = 7;
}

// 获取用户历史记录响应
message GetUserHistoryResponse {
  bool success = 1;
  string message = 2;
  repeated HistoryRecord records = 3;
  int64 total = 4;
  int32 page = 5;
  int32 page_size = 6;
}

// 获取对象历史记录请求
message GetObjectHistoryRequest {
  HistoryObjectType history_object_type = 1;
  int64 object_id = 2;
  ActionType action_type = 3;     // 可选，过滤行为类型
  string start_time = 4;          // 开始时间
  string end_time = 5;            // 结束时间
  int32 page = 6;
  int32 page_size = 7;
}

// 获取对象历史记录响应
message GetObjectHistoryResponse {
  bool success = 1;
  string message = 2;
  repeated HistoryRecord records = 3;
  int64 total = 4;
  int32 page = 5;
  int32 page_size = 6;
}

// 删除历史记录请求
message DeleteHistoryRequest {
  int64 user_id = 1;
  repeated int64 record_ids = 2;  // 要删除的记录ID列表
}

// 删除历史记录响应
message DeleteHistoryResponse {
  bool success = 1;
  string message = 2;
  int32 deleted_count = 3;
}

// 清空用户历史记录请求
message ClearUserHistoryRequest {
  int64 user_id = 1;
  ActionType action_type = 2;     // 可选，只清空特定类型
  HistoryObjectType history_object_type = 3;     // 可选，只清空特定对象类型
  string before_time = 4;         // 可选，只清空指定时间之前的记录
}

// 清空用户历史记录响应
message ClearUserHistoryResponse {
  bool success = 1;
  string message = 2;
  int32 deleted_count = 3;
}

// 用户行为统计信息
message UserActionStats {
  int64 user_id = 1;
  ActionType action_type = 2;
  int64 total_count = 3;          // 总次数
  int64 today_count = 4;          // 今日次数
  int64 week_count = 5;           // 本周次数
  int64 month_count = 6;          // 本月次数
  string last_action_time = 7;    // 最后行为时间
}

// 获取用户行为统计请求
message GetUserActionStatsRequest {
  int64 user_id = 1;
  ActionType action_type = 2;     // 可选，获取特定行为统计
}

// 获取用户行为统计响应
message GetUserActionStatsResponse {
  bool success = 1;
  string message = 2;
  repeated UserActionStats stats = 3;
}

// 对象热度统计信息
message ObjectHotStats {
  HistoryObjectType history_object_type = 1;
  int64 object_id = 2;
  string object_title = 3;
  int64 view_count = 4;           // 浏览次数
  int64 like_count = 5;           // 点赞次数
  int64 favorite_count = 6;       // 收藏次数
  int64 share_count = 7;          // 分享次数
  int64 comment_count = 8;        // 评论次数
  double hot_score = 9;           // 热度分数
  string last_active_time = 10;   // 最后活跃时间
}

// 获取热门对象请求
message GetHotObjectsRequest {
  HistoryObjectType history_object_type = 1;
  string time_range = 2;          // 时间范围：today, week, month, all
  int32 limit = 3;                // 返回数量限制
}

// 获取热门对象响应
message GetHotObjectsResponse {
  bool success = 1;
  string message = 2;
  repeated ObjectHotStats objects = 3;
}

// 用户活跃度统计信息
message UserActivityStats {
  int64 user_id = 1;
  string date = 2;                // 日期
  int64 total_actions = 3;        // 总行为次数
  int64 unique_objects = 4;       // 互动的唯一对象数
  int64 online_duration = 5;      // 在线时长（分钟）
  double activity_score = 6;      // 活跃度分数
}

// 获取用户活跃度统计请求
message GetUserActivityStatsRequest {
  int64 user_id = 1;
  string start_date = 2;          // 开始日期
  string end_date = 3;            // 结束日期
}

// 获取用户活跃度统计响应
message GetUserActivityStatsResponse {
  bool success = 1;
  string message = 2;
  repeated UserActivityStats stats = 3;
}

// 历史事件消息（用于Kafka）
message HistoryEvent {
  string type = 1;                // 事件类型
  int64 record_id = 2;            // 记录ID
  int64 user_id = 3;              // 用户ID
  ActionType action_type = 4;     // 行为类型
  HistoryObjectType history_object_type = 5;  // 对象类型
  int64 object_id = 6;            // 对象ID
  int64 timestamp = 7;            // 时间戳
}

// 历史记录服务的gRPC接口
service HistoryService {
  // 基础历史记录操作
  rpc CreateHistory(CreateHistoryRequest) returns (CreateHistoryResponse);
  rpc BatchCreateHistory(BatchCreateHistoryRequest) returns (BatchCreateHistoryResponse);
  rpc GetUserHistory(GetUserHistoryRequest) returns (GetUserHistoryResponse);
  rpc GetObjectHistory(GetObjectHistoryRequest) returns (GetObjectHistoryResponse);
  rpc DeleteHistory(DeleteHistoryRequest) returns (DeleteHistoryResponse);
  rpc ClearUserHistory(ClearUserHistoryRequest) returns (ClearUserHistoryResponse);
  
  // 统计分析
  rpc GetUserActionStats(GetUserActionStatsRequest) returns (GetUserActionStatsResponse);
  rpc GetHotObjects(GetHotObjectsRequest) returns (GetHotObjectsResponse);
  rpc GetUserActivityStats(GetUserActivityStatsRequest) returns (GetUserActivityStatsResponse);
}
